--- a/demo-app/Files/style.css
+++ b/demo-app/Files/style.css
@@ -1,16 +1,28 @@
 ﻿html {
 	overflow: hidden;
+	color: white;
 	height: 100%;
 	width: 100%;
-	background: rgba(240, 200, 255, 0.8);
 }
 
-.resizeGrip {
-	background: lightblue;
-	border: 1px solid blue;
-	position: absolute;
+.outer_wrapper{
+	width: 300px;
+	position: relative;
+	border: 1px solid rgb(125, 78, 11);
+	border-radius: 3px;
+	background-color: rgba(27,26,70,1);
+	background: linear-gradient(to right, rgba(27,26,70,1) 0%, rgba(42,41,100,1) 34%, rgba(74,85,182,1) 100%);
+	padding: 10px;
+
 }
 
+.window_header{
+	padding-bottom: 10px;
+	border-bottom: 1px solid;
+	border-color: rgb(125, 78, 11);
+	border-radius: 3px;
+	padding-left: calc(50% - 115px);
+}
 #content {
 	position: absolute;
 	top:10px;
@@ -20,66 +32,3 @@
 	padding: 10px;
 }
 
-#resizeGripTop {
-	height: 10px;
-	top: 0;
-	left: 10px;
-	right: 10px;
-	cursor: ns-resize;
-}
-
-#resizeGripBottom {
-	height: 10px;
-	bottom: 0;
-	left: 10px;
-	right: 10px;
-	cursor: ns-resize;
-}
-
-#resizeGripLeft {
-	width: 10px;
-	left: 0;
-	top: 10px;
-	bottom: 10px;
-	cursor: ew-resize;
-}
-
-#resizeGripRight {
-	width: 10px;
-	right: 0;
-	top: 10px;
-	bottom: 10px;
-	cursor: ew-resize;
-}
-
-#resizeGripTopLeft {
-	width: 10px;
-	height: 10px;
-	top: 0;
-	left: 0;
-	cursor: nwse-resize;
-}
-
-#resizeGripBottomLeft {
-	width: 10px;
-	height: 10px;
-	bottom: 0;
-	left: 0;
-	cursor: nesw-resize;
-}
-
-#resizeGripTopRight {
-	width: 10px;
-	height: 10px;
-	top: 0;
-	right: 0;
-	cursor: nesw-resize;
-}
-
-#resizeGripBottomRight {
-	width: 10px;
-	height: 10px;
-	bottom: 0;
-	right: 0;
-	cursor: nwse-resize;
-}
