--- a/demo-app/Files/style.css
+++ b/demo-app/Files/style.css
@@ -3,25 +3,43 @@
 	color: white;
 	height: 100%;
 	width: 100%;
+	box-sizing: border-box;
 }
 
 .outer_wrapper{
 	width: 300px;
+	height: 600px;
 	position: relative;
 	border: 1px solid rgb(125, 78, 11);
 	border-radius: 3px;
 	background-color: rgba(27,26,70,1);
-	background: linear-gradient(to right, rgba(27,26,70,1) 0%, rgba(42,41,100,1) 34%, rgba(74,85,182,1) 100%);
-	padding: 10px;
-
+	
+	padding: 0px;
+	opacity: 0.9;
 }
 
-.window_header{
-	padding-bottom: 10px;
+.window_header {
+	box-sizing: border-box;
+	width: 100%;
+	height: 60px;
+	margin: 0px;
+	padding: 0px;
+	padding-top: 10px;
 	border-bottom: 1px solid;
 	border-color: rgb(125, 78, 11);
-	border-radius: 3px;
-	padding-left: calc(50% - 115px);
+	padding-bottom: 10px;
+	padding-left: 10px;
+	margin-bottom: 20px;
+	background: linear-gradient(to right, rgba(45, 26, 70, 0.92) 0%, rgba(45, 26, 70, 0.92) 33%, rgba(74, 153, 182, 1) 100%);
+}
+
+.window_header_text{
+	
+}
+
+.body_p{
+	margin-top: 5px;
+	margin-bottom: 5px;
 }
 #content {
 	position: absolute;
