--- a/demo-app/Files/style.css
+++ b/demo-app/Files/style.css
@@ -1,52 +1,69 @@
-﻿html {
-	overflow: hidden;
-	color: white;
-	height: 100%;
-	width: 100%;
-	box-sizing: border-box;
+html {
+    overflow: hidden;
+    color: rgb(255, 214, 43);
+    height: 100%;
+    width: 100%;
+    box-sizing: border-box;
 }
 
-.outer_wrapper{
-	width: 300px;
-	height: 600px;
+a {
+    text-decoration: none;
+}
+
+.buttons{
+	margin: 2.5px;
+}
+.button_row{
+	padding: 10px;
+}
+#window_close{
+	float: right;
 	position: relative;
-	border: 1px solid rgb(125, 78, 11);
-	border-radius: 3px;
-	background-color: rgba(27,26,70,1);
-	
-	padding: 0px;
-	opacity: 0.9;
+	right: 20px;
+}
+.outer_wrapper {
+    /*height: 600px;*/
+    position: relative;
+    background-color: rgba(27, 26, 70, 1);
+    border: 1px solid rgba(74, 153, 182, .9);
+    border-radius: 6px;
+    box-shadow: rgba(0, 0, 0, .9) 0 0 6px;
+    font-family: Arial, Tahoma, sans-serif;
+    padding: 0px;
+    opacity: 0.9;
+    width: 300px;
 }
 
 .window_header {
-	box-sizing: border-box;
-	width: 100%;
-	height: 60px;
-	margin: 0px;
-	padding: 0px;
-	padding-top: 10px;
-	border-bottom: 1px solid;
-	border-color: rgb(125, 78, 11);
-	padding-bottom: 10px;
-	padding-left: 10px;
-	margin-bottom: 20px;
-	background: linear-gradient(to right, rgba(45, 26, 70, 0.92) 0%, rgba(45, 26, 70, 0.92) 33%, rgba(74, 153, 182, 1) 100%);
+    box-sizing: border-box;
+    width: 100%;
+    height: 60px;
+    margin: 0px;
+    padding: 0px;
+    padding-top: 10px;
+    border-bottom: 1px solid;
+    border-color: rgba(74, 153, 182, .9);
+    padding-bottom: 10px;
+    padding-left: 10px;
+    margin-bottom: 20px;
+    background: linear-gradient(to right, rgba(45, 26, 70, 0.92) 0%, rgba(45, 26, 70, 0.92) 33%, rgba(74, 153, 182, 1) 100%);
+    font-weight: bold;
+    line-height: 20px;
 }
 
-.window_header_text{
-	
+.window_header_text {}
+
+.body_p {
+    margin-top: 5px;
+    margin-bottom: 5px;
+    padding-left: 10px;
 }
 
-.body_p{
-	margin-top: 5px;
-	margin-bottom: 5px;
-}
 #content {
-	position: absolute;
-	top:10px;
-	bottom: 10px;
-	left: 10px;
-	right: 10px;
-	padding: 10px;
+    position: absolute;
+    top: 10px;
+    bottom: 10px;
+    left: 10px;
+    right: 10px;
+    padding: 10px;
 }
-
